tests/spread_indexers/spread_indexers.exp
Error ---------------------------------------------------------------------------------------------------- test.js:12:11

Cannot spread object literal because number [1] is incompatible with string [2].

   test.js:12:11
   12| const i = {...g, ...h}; // Error. Keys and values of the indexers fail to unify 
                 ^^^^^^^^^^^^

References:
   test.js:10:21
   10| const g: {[string]: number} = {};
                           ^^^^^^ [1]
   test.js:11:21
   11| const h: {[number]: string} = {};
                           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:12:11

Cannot spread object literal because number [1] is incompatible with string [2].

   test.js:12:11
   12| const i = {...g, ...h}; // Error. Keys and values of the indexers fail to unify 
                 ^^^^^^^^^^^^

References:
   test.js:11:12
   11| const h: {[number]: string} = {};
                  ^^^^^^ [1]
   test.js:10:12
   10| const g: {[string]: number} = {};
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:16:21

Cannot determine a type for object literal [1]. object type [2] cannot be spread because the indexer string [3] may
overwrite properties with explicit keys in a way that Flow cannot track. Can you spread object type [2] first or remove
the indexer?

   test.js:16:21
   16| const l = {...j, ...k}; // Error, there may be some properties in j that are not overwritten by the indexer
                           ^

References:
   test.js:16:11
   16| const l = {...j, ...k}; // Error, there may be some properties in j that are not overwritten by the indexer
                 ^^^^^^^^^^^^ [1]
   test.js:15:10
   15| const k: {[string]: number} = {};
                ^^^^^^^^^^^^^^^^^^ [2]
   test.js:15:12
   15| const k: {[string]: number} = {};
                  ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:20:21

Cannot determine a type for object literal [1]. object type [2] cannot be spread because the indexer string [3] may
overwrite properties with explicit keys in a way that Flow cannot track. Can you spread object type [2] first or remove
the indexer?

   test.js:20:21
   20| const o = {...m, ...n}; // Error, indexer may overwrite properties with explicit keys
                           ^

References:
   test.js:20:11
   20| const o = {...m, ...n}; // Error, indexer may overwrite properties with explicit keys
                 ^^^^^^^^^^^^ [1]
   test.js:19:10
   19| const n: {[string]: string} = {foo: 'string'};
                ^^^^^^^^^^^^^^^^^^ [2]
   test.js:19:12
   19| const n: {[string]: string} = {foo: 'string'};
                  ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:24:21

Cannot determine a type for object literal [1]. object type [2] cannot be spread because the indexer string [3] may
overwrite properties with explicit keys in a way that Flow cannot track. Can you spread object type [2] first or remove
the indexer?

   test.js:24:21
   24| const r = {...p, ...q}; // Error, indexer may overwrite properties with explicit keys
                           ^

References:
   test.js:24:11
   24| const r = {...p, ...q}; // Error, indexer may overwrite properties with explicit keys
                 ^^^^^^^^^^^^ [1]
   test.js:23:10
   23| const q: {[string]: string} = {foo: 'string'};
                ^^^^^^^^^^^^^^^^^^ [2]
   test.js:23:12
   23| const q: {[string]: string} = {foo: 'string'};
                  ^^^^^^ [3]



Found 5 errors
